--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@telegram-apps/analytics",
-  "version": "1.4.4",
+  "version": "1.5.0-beta",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "wasm-pack build ./src/wasm/human-proof --target web && vite build --mode script && vite build --mode package",
+    "build": "vite build --mode script && vite build --mode package",
     "watch": "vite --watch",
     "serve": "http-server -p 8080 ./dist",
     "typecheck": "tsc --noEmit"
