--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@telegram-apps/analytics",
-  "version": "1.5.0-beta",
+  "version": "1.6.0",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
